--- a/szablon.html
+++ b/szablon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Podgląd Artykułu</title>
-    <!-- Dodaj style CSS -->
+    <!-- styl CSS -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,6 +34,8 @@
 
 </head>
 <body>
-    <!-- Tutaj wklej wygenerowany kod artykułu -->
+    
+    <!-- Tutaj wklej wygenerowany kod artykułu z pliku artykul.html -->
+    
 </body>
 </html>
