--- a/podglad.html
+++ b/podglad.html
@@ -14,7 +14,7 @@
         .container {
             max-width: 800px;
             margin: auto;
-            background-color: #ffffff;
+            background-color: #e3f2fd;
             padding: 30px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
